apps/70-tools/stirling-pdf/overlays/prod/probes-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-pdf-stirling-pdf-chart
spec:
  template:
    spec:
      containers:
        - name: stirling-pdf-chart
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
