apps/70-tools/stirling-pdf/overlays/prod/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-pdf-ingress
spec:
  template:
    spec:
      containers:
        - name: stirling-pdf-ingress
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 20m
              memory: 128Mi
