apps/70-tools/stirling-pdf/overlays/prod/ssa-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-pdf-stirling-pdf-chart
  namespace: tools
  annotations:
    goldilocks.fairwinds.com/enabled: "true"
    vpa.kubernetes.io/updateMode: "Off"
    argocd.argoproj.io/sync-wave: "10"
