apps/70-tools/stirling-pdf/overlays/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-pdf-ingress
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Stirling PDF
    gethomepage.dev/icon: stirling-pdf.png
    gethomepage.dev/group: Tools
spec:
  ingressClassName: traefik
  rules:
    - host: pdf.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keda-interceptor-proxy
                port:
                  number: 8080
  tls:
    - hosts:
        - pdf.truxonline.com
      secretName: stirling-pdf-tls-prod
